Fix styles on mobile view

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -78,7 +78,9 @@ footer.content-info {
 }
 
 .agency-footer {
+	background:$black;
 	.container {
+		width:100%;
 		padding: 20px 0px 20px 0px;
 		margin-left: auto;
 		margin-right: auto;
